<resources>
    <string name="account_lookup_not_found">Could not find a matching account.</string>
    <string name="action_add_participant">Add Participant</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_failure_add_participant_assistive_access">Cannot add participant because assistive access is disabled for the weServer.</string>
    <string name="action_failure_add_participant_group_not_found">Unable to add participant because the group chat was not found.</string>
    <string name="action_failure_add_participant_invalid_number">Could not add participant because the number or email entered was not valid.</string>
    <string name="action_failure_add_participant_number_not_imessage">Unable to add participant because the number was not registered with iMessage.</string>
    <string name="action_failure_add_participant_ui_error">Cannot add participant due to a Messages Application error.</string>
    <string name="action_failure_add_participant_unknown">An error occurred while adding a person to the chat.</string>
    <string name="action_failure_create_group_assistive_access">A group chat could not be created because assistive access is disabled for the weServer.</string>
    <string name="action_failure_create_group_invalid_number">A group chat could not be created because one of the participants\' emails or numbers was invalid.</string>
    <string name="action_failure_create_group_number_not_imessage">A group chat could not be created because one of the participants\' emails or numbers was not registered with iMessage.</string>
    <string name="action_failure_create_group_ui_error">A group chat could not be created due to a Messages Application Error.</string>
    <string name="action_failure_create_group_unknown">An error occurred while creating a group chat.</string>
    <string name="action_failure_generic">An action could not be performed due to an error.</string>
    <string name="action_failure_leave_chat_assistive_access">Cannot leave chat because assistive access is disabled for the weServer.</string>
    <string name="action_failure_leave_chat_group_not_found">Could not leave chat because the group chat was not found.</string>
    <string name="action_failure_leave_chat_group_size">You cannot leave a chat with only 2 members.</string>
    <string name="action_failure_leave_chat_ui_error">Cannot leave chat due to a Messages Application error.</string>
    <string name="action_failure_leave_chat_unknown">An error occurred while trying to leave a chat.</string>
    <string name="action_failure_remove_participant_assistive_access">Cannot remove participant because assistive access is disabled for the weServer.</string>
    <string name="action_failure_remove_participant_group_not_found">Unable to remove participant because the group chat was not found.</string>
    <string name="action_failure_remove_participant_group_size">You cannot remove people in a chat with only 2 members.</string>
    <string name="action_failure_remove_participant_invalid_number">Unable to remove a participant because the email or phone number was not found.</string>
    <string name="action_failure_remove_participant_ui_error">Cannot remove participant due to a Messages Application error.</string>
    <string name="action_failure_remove_participant_unknown">An error occurred while removing a person from the chat.</string>
    <string name="action_failure_rename_group_assistive_access">Cannot rename group chat because assistive access is disabled for the weServer.</string>
    <string name="action_failure_rename_group_not_found">Cannot rename group because the group chat was not found!</string>
    <string name="action_failure_rename_group_ui_error">Cannot rename group due to a Messages Application Error.</string>
    <string name="action_failure_rename_group_unknown">An error occurred while renaming a group chat.</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_message_add_participant">%1$s has been added to the group.</string>
    <string name="action_message_leave_group">You have left this chat.</string>
    <string name="action_message_remove_participant">%1$s has been removed from the group.</string>
    <string name="action_message_rename_group">This chat has been renamed to \"%1$s\".</string>
    <string name="action_perform_error_contact_not_found">Action: %1$s could not be performed because the requested contact was not found.</string>
    <string name="action_perform_error_default">An action could not be performed due to an unknown error.</string>
    <string name="action_perform_error_group_not_found">Action: %1$s could not be performed because the group chat was not found.</string>
    <string name="action_remove_participant">Remove Participant</string>
    <string name="action_rename_group">Rename Group</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="app_name">weMessage</string>
    <string name="attachment_receive_failure_generic">An attachment was unable to be delivered to you.</string>
    <string name="attachment_receive_failure_size">An attachment was unable to be delivered to you because the file was too large.</string>
    <string name="attachment_send_failure_generic">One of the attachments could not be sent.</string>
    <string name="attachment_send_failure_size">One of the attachments could not be sent because the file was too large.</string>
    <string name="attachments_added_and_removed_toast">%1$d Attachments were added to the message and %2$d Attachments were removed from it.</string>
    <string name="attachments_added_toast">%1$d Attachments added to the message.</string>
    <string name="attachments_removed_toast">%1$d Attachments removed from the message.</string>
    <string name="audio_record_error">An error occurred while trying record your audio.</string>
    <string name="audio_recording_added">Voice Message added to the message.</string>
    <string name="block_contact">Block Contact</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="camera_attachment_added">Camera Attachment added to the message.</string>
    <string name="camera_capture_error">An error occurred during camera capture.</string>
    <string name="chat_delete_message_go_back">The chat you were viewing was deleted.</string>
    <string name="chat_name">Chat Name</string>
    <string name="chat_update_error">An error occurred while updating a group chat.</string>
    <string name="choose_picture">Choose Photo</string>
    <string name="connect_to_server">Connect to weServer</string>
    <string name="connecting_dialog_message">Connecting to weServer with IP: %1$s on Port: %2$d</string>
    <string name="connecting_dialog_title">Connecting…</string>
    <string name="connection_cancelled">Connection cancelled.</string>
    <string name="connection_error_already_connected_message">This device appears to be already connected to this weServer. \n\nIf it is not, try restarting your weServer to fix this message.</string>
    <string name="connection_error_authentication_message">An error occurred while authenticating the login information. \n\nPlease restart your app or weServer instance.</string>
    <string name="connection_error_client_disconnect_message">You have disconnected from the weServer.</string>
    <string name="connection_error_force_disconnect_message">This device has been forcefully disconnected by the weServer.</string>
    <string name="connection_error_incorrect_version_message">weMessage could not connect because the server is running on a different version.</string>
    <string name="connection_error_invalid_login_message">The username or password entered is not correct. Please try again.</string>
    <string name="connection_error_server_closed_message">The weServer has shut down and closed the connection.</string>
    <string name="connection_error_server_side_message">A server-side error caused the connection to be lost.</string>
    <string name="connection_error_socket_closed">The connection to the weServer has unexpectedly been closed.</string>
    <string name="connection_error_unknown_loss">The connection to the weServer has been lost.</string>
    <string name="connection_error_unknown_message">An unknown error occurred and has caused the connection to be dropped.</string>
    <string name="contact_enter">Enter a name, phone, or email</string>
    <string name="contact_not_found">Could not find a matching contact.</string>
    <string name="contact_sync_fail">Contact Sync Failed</string>
    <string name="contact_sync_fail_message">An error occurred while performing a Contact Sync. If you synced with your computer, please check your weServer logs for issues.</string>
    <string name="contact_sync_fail_offline">You cannot Contact Sync with your Mac while in %1$s! Connect to your weServer in order to do this.</string>
    <string name="contact_sync_success">Contact Sync Success</string>
    <string name="contact_sync_success_message">Your contacts have successfully been imported to your weMessage Contact List.</string>
    <string name="contact_update_error">An error occurred while updating contact information.</string>
    <string name="conversation_load_failure">The messages for that conversation could not be loaded due to an internal error.</string>
    <string name="copy_message_attachments">You cannot copy attachments to the clipboard.</string>
    <string name="copy_message_success_multiple">Messages copied to clipboard</string>
    <string name="copy_message_success_single">Message copied to clipboard</string>
    <string name="create_chat_minimum">You must enter in an email or phone number to send this message to.</string>
    <string name="create_contact">Create New Contact</string>
    <string name="default_group_name">weMessage Group</string>
    <string name="delete_audio_recording">Delete\nVoice Message</string>
    <string name="delete_camera_attachment">Delete\nAttachment</string>
    <string name="delete_handle_message">This contact may be connected to your chats and messages. \n\nIf you delete it, you will also be deleting any messages or chats that this contact is in.</string>
    <string name="delete_handle_title">Erase Contact</string>
    <string name="delete_picture">Delete Photo</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="edit_number">Edit Number</string>
    <string name="file_not_found">File Not Found</string>
    <string name="first_name">First Name</string>
    <string name="generic_attachments_added_and_removed_toast">Attachments were added and removed from the message.</string>
    <string name="handles_title">%1$d Contacts</string>
    <string name="image_gallery_error">An error occurred while saving this to your photo library.</string>
    <string name="message_input_hint">Enter a message…</string>
    <string name="no_attachments_found_chat">No attachments have been sent to this chat.</string>
    <string name="phone_number_not_detected">weMessage could not get your phone number. Since weMessage is your default messaging app, you must enter in your number in order for it to work.</string>
    <string name="set_default_sms_prompt">weMessage supports normal texting (SMS and MMS). If you want weMessage to be your default messaging app, click Continue. Otherwise, click Cancel, and SMS Mode will be disabled.</string>
    <string name="word_attachments">Attachments</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_continue">Continue</string>
    <string name="word_copy">Copy</string>
    <string name="word_delete">Delete</string>
    <string name="word_more">More…</string>
    <string name="word_phone">Phone Number</string>
    <string name="word_retry">Retry</string>
    <string name="word_to">To: </string>
</resources>