<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_app_logo"
            android:background="@drawable/app_icon_border"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <scott.wemessage.app.ui.view.font.FontTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            app:fontName="OrkneyLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appIcon"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/setSmsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/set_default_sms_prompt"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <Button
            android:id="@+id/continueButton"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:textColor="@color/heavyBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/word_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/setSmsText" />

        <Button
            android:id="@+id/cancelButton"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@color/brightRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/word_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>