<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setNumberScrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/setNumberConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_app_logo"
            android:background="@drawable/app_icon_border"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <scott.wemessage.app.ui.view.font.FontTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            app:fontName="OrkneyLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appIcon"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/setNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/phone_number_not_detected"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <LinearLayout
            android:id="@+id/setNumberLinearLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="16dp"
            android:background="@drawable/login_border"
            android:layout_marginTop="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setNumberText" >

            <scott.wemessage.app.ui.view.font.FontTextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/setNumberEditText"
                app:fontName="OrkneyBold"
                android:text="@string/word_phone"
                android:textColor="@color/lightBlack" />

            <EditText
                android:id="@+id/setNumberEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorHeader"
                android:inputType="numberSigned"
                android:imeOptions="actionDone"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/continueButton"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/heavyBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/word_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/setNumberLinearLayout" />

        <Button
            android:id="@+id/cancelButton"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/brightRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/word_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>